[package]
name = "hoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.2.16", features=["derive"]}
jsonxf = "1.1.1"
serde = "1.0.142"
serde_json = "1.0.83"
ureq = {version="2.5.0", features=["json"]}
